--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
